data/derived/comb/progs/unify/prog0002.ml.out
Characters 62-63:
  | (x::xs') -> x+1 sumList xs';;
                  ^
Error: This expression has type int
       This is not a function; it cannot be applied.
